--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "4.18.2",
     "express-session": "1.17.3",
+    "fcm-node": "^1.6.1",
     "http-errors": "^2.0.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "9.0.2",
