--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
@@ -28,6 +29,7 @@
     "multer": "1.4.5-lts.1",
     "mysql": "2.18.1",
     "mysql2": "^3.6.5",
+    "node-fetch": "^3.3.2",
     "nodemon": "3.0.1",
     "path": "0.12.7",
     "redis": "^4.6.10",
@@ -40,7 +42,7 @@
     "@babel/preset-env": "^7.23.3",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-node": "^11.1.0",
-    "sequelize-cli": "^6.6.2",
-    "mysql2": "^3.6.5"
+    "mysql2": "^3.6.5",
+    "sequelize-cli": "^6.6.2"
   }
 }
