--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "1.17.3",
     "fcm-node": "^1.6.1",
     "http-errors": "^2.0.0",
+    "https": "^1.0.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "9.0.2",
     "moment": "^2.29.4",
