--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "4.18.2",
     "express-session": "1.17.3",
     "fcm-node": "^1.6.1",
+    "googleapis": "^129.0.0",
     "http-errors": "^2.0.0",
     "https": "^1.0.0",
     "joi": "^17.11.0",
