--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "node-fetch": "^2.7.0",
     "nodemon": "3.0.1",
     "path": "0.12.7",
-    "redis": "^4.6.10",
+    "redis": "^3.1.2",
     "sequelize": "^6.35.0",
+    "twilio": "^4.19.3",
     "util": "^0.12.5"
   },
   "devDependencies": {
